# predicate-lang

./: .gitignore  Cargo.toml  Makefile  README.md  action.yml  aggregate.pl  allow.pl  attribute.pl  go.mod  go.sum  main.go  map.pl  notes.md  policy.pl  query.pl  spec.md  test.pl
predicate/: .flake8  Makefile  README.md  access.py  mypy.ini  predicatelint.yml  pyproject.toml
predicate/cli/: __main__.py  output.py  policy_utils.py  template.py  util.py
predicate/cli/tests/: buggy_policy.py  mock_policy.py  test_lint.py  test_policy_utils.py  test_util.py
predicate/common/: __init__.py  constants.py  file_utils.py  policy_utils.py
predicate/common/tests/: test_policy_utils.py
predicate/examples/: access.py  join_session.py  join_session_requires.py  list_nodes.py  logins.py  start_session.py
predicate/experiments/: func.py  hello.py  join.py  map2.py  map_simple.py
predicate/lint/: README.md  __init__.py  ast.py  constants.py  linter.py  parser.py  report.py  rule.py
predicate/lint/rules/: forbid_allow.py  no_allow.py
predicate/lint/tests/: mock_ast_rule.py  mock_invalid_rule_file.py  mock_lint_rule_file.py  mock_rules.py  test_ast.py  test_linter.py  test_parser.py  test_report.py  test_rule.py
predicate/solver/: __init__.py  ast.py  aws.py  teleport.py
predicate/solver/test/: test_ast.py  (+4 more)
predicate/template/: default.txt
predicate/tests/: teleport.py
python/: .flake8  .gitignore  Makefile  README.md  access.py  func.py  map.py  pyproject.toml  requirements.txt  setup.py
python/experiments/: hello.py  map.py  map2.py  map_simple.py  rbac.py
(+81 files in other folders)
