[tool.poetry]
name = "predicate"
version = "0.1.0"
description = ""
authors = ["Joel Wejdenstål <jwejdenstal@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
z3-solver = "^4.11.2.0"
lint-python = "^2.0.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pytest = "^7.1.3"
black = "^22.8.0"
setuptools = "^65.3.0"

[tool.lint-python]
lint-version = "2"
source = "."
extra-requirements = "types-requests"
use-mypy = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
